--- a/reps_event_app/pubspec.yaml
+++ b/reps_event_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_svg:
   http:
+  provider:
   flutter_map: 0.5.6
   font_awesome_flutter:
   url_launcher:
