--- a/reps_event_app/pubspec.yaml
+++ b/reps_event_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_map: 0.5.6
   font_awesome_flutter:
   url_launcher:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
