decoding html chars

--- a/reps_event_app/pubspec.yaml
+++ b/reps_event_app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   font_awesome_flutter:
   url_launcher:
   shared_preferences:
+  html_unescape:
 
 dev_dependencies:
   flutter_test:
