--- a/reps_event_app/pubspec.yaml
+++ b/reps_event_app/pubspec.yaml
@@ -31,18 +31,17 @@ dependencies:
   url_launcher:
   shared_preferences:
   html_unescape:
+  flare_flutter: ^1.5.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -50,7 +49,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/img/
+    - assets/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
