add lazy loading for images

--- a/reps_event_app/pubspec.yaml
+++ b/reps_event_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences:
   html_unescape:
   flare_flutter: ^1.5.9
+  cached_network_image: ^1.1.1
 
 dev_dependencies:
   flutter_test:
