--- a/reps_event_app/pubspec.yaml
+++ b/reps_event_app/pubspec.yaml
@@ -32,10 +32,12 @@ dependencies:
   shared_preferences:
   html_unescape:
   flare_flutter: ^1.5.9
+  cached_network_image: ^1.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  image_test_utils: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
